--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,8 +91,8 @@ schema: &schema
         echo "3. Generating specification files!"
         echo "Files in /data"
         docker exec schema ls /data
-        echo "docker exec schema /bin/bash /code/entrypoint.sh start --config /data/configuration.yml --folder /data/specifications --output /data/output"
-        docker exec schema /bin/bash /code/entrypoint.sh start --config /data/configuration.yml --folder /data/specifications --output /data/output
+        echo "docker exec schema map2model --config /data/configuration.yml --folder /data/specifications --output /data/output"
+        docker exec schema map2model --config /data/configuration.yml --folder /data/specifications --output /data/output
         echo "4. Obtaining finished files"
         mkdir -p /tmp/specifications
         echo "docker cp schema:/data/output/. /tmp/specifications"
