--- a/specifications/configuration.yml
+++ b/specifications/configuration.yml
@@ -11,9 +11,9 @@ specifications:
   use_cases_url: https://www.github.com/openschemas/spec-container
   version: 0.0.1
   parent_type: SoftwareApplication
-- name: DataCatalog 
+- name: ContainerImage
   status: revision
   spec_type: Profile
   use_cases_url: https://www.github.com/openschemas/spec-container
   version: 0.0.1
-  parent_type: CreativeWork
+  parent_type: SoftwareApplication
